--- a/eadsenac.html
+++ b/eadsenac.html
@@ -11,6 +11,88 @@
             <img src="imagens/logo.png" alt="">
         </figure>
         <h1>Senac EAD</h1>
+        <h2>Senac EAD</h2>
+        <nav>
+            <ul>
+                <strong>QUEM SOMOS</strong>
+                <li><a href=”https://www.ead.senac.br/quem-somos”>Quem somos</a></li>
+                <strong>POLÍTICA DE DESCONTOS</strong>
+                <li><a href=”https://www.ead.senac.br/politica-de-descontos-rede-senac-ead”>Política de descontos Rede Senac EAD</a></li>
+                <li><a href=”https://www.ead.senac.br/descontos-por-perfil-de-publico”>Descontos por Perfil de Público</a></li>
+                <li><a href=”https://www.ead.senac.br/descontos-por-forma-de-pagamento”>Desconto por Forma de Pagamento</a></li>
+                <strong>PROGRAMA SENAC DE GRATUIDADE</strong>
+                <li><a href=”https://www.ead.senac.br/gratuito/”>Programa Senac de Gratuidade</a></li>
+                <strong>BOLSA DE ESTUDO</strong>
+                <li><a href=”https://www.ead.senac.br/bolsa-de-estudo”>Bolsa de Estudo</a></li>
+                <li><a href=”https://www.ead.senac.br/bolsa-empresa”>Bolsa Empresa</a></li>
+                <li><a href=”https://www.ead.senac.br/extensao-universitaria-senac”>Extensão Universitária</a></li>
+                <li><a href=”https://www.ead.senac.br/bolsa-social”>Bolsa Social</a></li>
+                <li><a href=”https://www.ead.senac.br/iniciacao-cientifica”>Iniciação Científica</a></li>
+                <li><a href=”https://www.ead.senac.br/monitoria”>Monitoria</a></li>
+                <strong>TRANSFERÊNCIA</strong>
+                <li><a href=”https://www.ead.senac.br/como-fazer-transferencias”>Como Fazer transferências no Senac EAD</a></li>
+                <li><a href=”https://www.ead.senac.br/transferencia-interna”>Transferência Interna</a></li>
+                <li><a href=”https://www.ead.senac.br/transferencia-externa”>Transferência Externa</a></li>
+                <li><a href=”https://www.ead.senac.br/portador-de-diploma”>Portador de Diploma</a></li>
+            </ul>
+        </nav>
+        <h2>Cursos</h2>
+        <nav>
+            <ul>
+                <strong>POR NÍ­VEL</strong>
+                <li><a href=”https://www.ead.senac.br/cursos-livres/”>Cursos livres</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-tecnicos/”>Cursos técnicos</a></li>
+                <li><a href=”https://www.ead.senac.br/graduacao/”>Graduação</a></li>
+                <li><a href=”https://www.ead.senac.br/pos-graduacao/”>Pós-graduação</a></li>
+                <li><a href=”https://www.ead.senac.br/extensao-universitaria/”>Extensão Universitária</a></li>
+                <strong>COMBOS</strong>
+                <li><a href=”https://www.ead.senac.br/pacote-de-cursos-para-voce/”>Para você</a></li>
+                <li><a href=”https://www.ead.senac.br/pacote-de-cursos-para-sua-empresa/”>Para sua empresa</a></li>
+                <strong>POR ÁREA</strong>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/artes/”>Artes</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/beleza/”>Beleza</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/comercio/”>Comércio</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/comunicacao/”>Comunicação</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/design/”>Design</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/educacao/”>Educação</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/games/”>Games</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/gastronomia/”>Gastronomia</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/gestao/”>Gestão</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/hospitalidade/”>Hospitalidade</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/idiomas/”>Idiomas</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/informatica/”>Informática</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/meio-ambiente/”>Meio Ambiente</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/moda/”>Moda</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/nutricao/”>Nutrição</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/saude/”>Saúde</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/seguranca/”>Segurança do Trabalho</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/tecnologia-da-informacao/”>Tecnologia da Informação</a></li>
+                <li><a href=”https://www.ead.senac.br/cursos-por-area/turismo/”>Turismo</a></li>
+                <strong>APRENDIZAGEM</strong>
+                <li><a href=”https://www.ead.senac.br/portal/aprendizagem”>Para você</a></li>
+                <li><a href=”https://www.ead.senac.br/portal/programa-de-aprendizagem”>Para sua Empresa</a></li>
+            </ul>
+        </nav>
+        <h2>Polos</h2>
+        <nav>
+            <ul>
+                <li><a href=”https://www.ead.senac.br/polos/”>Polos</a></li>
+            </ul>
+        </nav>
+        <h2>Para sua empresa </h2>
+        <nav>
+            <ul>
+                <li><a href=”https://www.ead.senac.br/atendimento-corporativo/”>Atendimento Corporativo</a></li>
+                <li><a href=”https://www.ead.senac.br/programa-de-aprendizagem/”>Programa de Aprendizagem</a></li>
+                <li><a href=”https://www.ead.senac.br/pacote-de-cursos-para-sua-empresa/”>Combos para a sua empresa</a></li>
+            </ul>
+        </nav>
+        <h2>Fale com a gente</h2>
+        <nav>
+            <ul>
+                <li><a href=”https://www.ead.senac.br/fale-com-a-gente/”>Fale com a gente</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
@@ -91,7 +173,6 @@
         <hr>
         <section>
             <h2>Últimas notícias</h2>
-            <hr>
             <article>
                 <figure>
                     <img src="imagens/direitodigital.jpg" alt="">
@@ -128,6 +209,7 @@
                 <p>Leia agora mesmo o edital e saiba como participar do processo de ingresso nos cursos</p>
                 <a href="https://www.ead.senac.br/detalhe-noticia/11/2024/2/abertas-as-inscricoes-para-a-pos-graduacao-ead-do-senac/">Leia mais</a>
             </article>
+            <hr>
             <article>
                 <figure>
                     <img src="imagens/uxdesign.jpg" alt="">
@@ -203,7 +285,7 @@
             </article>
             <hr>
             <article>
-                <a href="https://www.ead.senac.br/programa-de-aprendizagem/"><img src="imagens/aprendizagem.png" alt=""></a>
+                <a href="https://www.ead.senac.br/programa-de-aprendizagem/"><img src="imagens/aprendizagem.png" alt=""></a> <br>
                 <strong>Aprendizagem</strong>
                 <p>Desenvolvimento de jovens para o trabalho e para a cidadania</p>
             </article>
@@ -214,27 +296,37 @@
         </section>
         <hr>
         <footer>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Senac Ead</th>
-                        <th>Cursos</th>
-                        <th>Combos</th>
-                        <th>Para sua empresa</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><a href="https://www.ead.senac.br/quem-somos">Quem somos</a></td>
-                        <td><a href="https://www.ead.senac.br/portal/niveis-de-ensino/">Por nível</a></td>
-                        <td><a href="https://www.ead.senac.br/portal/pacote-de-cursos-para-voce/">Para você</a></td>
-                        <td><a href="https://www.ead.senac.br/portal/atendimento-corporativo/">Atendimento Corporativo</a></td>
-                    </tr>
-                </tbody>
-            </table>
+            <h2>Senac EAD</h2>
+            <a href="https://www.ead.senac.br/quem-somos">Quem somos</a> <br>
+            <a href="https://www.ead.senac.br/politica-de-descontos-rede-senac-ead">Política de descontos</a> <br>
+            <a href="https://www.ead.senac.br/portal/gratuito/">Programa Senac de gratuidade</a> <br>
+            <a href="https://www.ead.senac.br/portal/noticias/">Notícias</a> <br>
+            <a href="https://www.ead.senac.br/portal/perguntas-frequentes/cursos-livres">Perguntas Frequentes</a> <br>
+            <a href="https://www.ead.senac.br/portal/depoimentos/">Depoimentos</a> <br>
+            <a href="https://www.ead.senac.br/portal/politica-de-privacidade">Política de Privacidade</a> <br>
+            <hr>
+            <h2>Cursos</h2>
+            <a href="https://www.ead.senac.br/portal/niveis-de-ensino/">POR NÍVEL</a> <br>
+            <a href="https://www.ead.senac.br/portal/cursos-livres/">Cursos Livres</a>  <br>
+            <a href="https://www.ead.senac.br/portal/cursos-tecnicos/">Cursos Técnicos</a>  <br>
+            <a href="https://www.ead.senac.br/portal/graduacao/">Graduação</a>  <br>
+            <a href="https://www.ead.senac.br/portal/pos-graduacao/">Pós-graduação</a>  <br>
+            <a href="https://www.ead.senac.br/portal/extensao-universitaria/">Extensão Universitária</a>  <br>
+            <a href="https://www.ead.senac.br/portal/cursos-por-area/">CURSOS POR ÁREA</a>  <br>
+            <hr>
+            <h2>Combos</h2>
+            <a href="https://www.ead.senac.br/portal/pacote-de-cursos-para-voce/">Para você</a> <br>
+            <a href="https://www.ead.senac.br/portal/pacote-de-cursos-para-sua-empresa/">Para sua empresa</a> <br>
+            <a href="https://www.ead.senac.br/portal/polos/">Polos</a> <br>
+            <h2>Para sua empresa</h2>
+            <hr>
+            <a href="https://www.ead.senac.br/portal/atendimento-corporativo/">Atendimento Corporativo</a> <br>
+            <a href="https://www.ead.senac.br/portal/programa-de-aprendizagem/">Programa Aprendizagem</a> <br>
+            <a href="https://www.ead.senac.br/portal/pacote-de-cursos-para-sua-empresa/">Combos para a sua Empresa</a> <br>
+            <figure>
+                <img src="imagens/logoa.PNG" alt="">
+            </figure>
         </footer>
     </main>
-    
-    
 </body>
 </html>
